Update for next release
 Committer: Erik Wright <eswright@pitt.edu>
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AdjustAlignment.R
	modified:   R/AlignDB.R
	modified:   R/AlignProfiles.R
	modified:   R/AlignSeqs.R
	modified:   R/Cophenetic.R
	modified:   R/DesignSignatures.R
	modified:   R/DetectRepeats.R
	modified:   R/DistanceMatrix.R
	modified:   R/FindGenes.R
	modified:   R/FindSynteny.R
	modified:   R/IdClusters.R
	modified:   R/IdTaxa.R
	modified:   R/PredictDBN.R
	modified:   R/RemoveGaps.R
	new file:   R/ScoreAlignment.R
	modified:   R/StaggerAlignment.R
	new file:   R/TreeLine.R
	modified:   R/utils.R
	new file:   inst/extdata/Human_huntingtin_cds.fas.gz
	new file:   inst/extdata/LongHumanProteins.fas.gz
	modified:   man/AlignDB.Rd
	modified:   man/AlignProfiles.Rd
	modified:   man/AlignSeqs.Rd
	modified:   man/AlignTranslation.Rd
	modified:   man/Cophenetic.Rd
	modified:   man/DECIPHER-package.Rd
	modified:   man/DetectRepeats.Rd
	modified:   man/DistanceMatrix.Rd
	modified:   man/FindNonCoding.Rd
	modified:   man/IdClusters.Rd
	modified:   man/IdTaxa.Rd
	modified:   man/LearnNonCoding.Rd
	modified:   man/MODELS.Rd
	modified:   man/MapCharacters.Rd
	modified:   man/MaskAlignment.Rd
	modified:   man/NonCoding-class.Rd
	modified:   man/ReadDendrogram.Rd
	modified:   man/RemoveGaps.Rd
	new file:   man/ScoreAlignment.Rd
	modified:   man/StaggerAlignment.Rd
	new file:   man/TreeLine.Rd
	modified:   man/WriteDendrogram.Rd
	modified:   src/AlignProfiles.c
	modified:   src/ChainSegments.c
	modified:   src/Cluster.c
	modified:   src/ClusterML.c
	new file:   src/ClusterMP.c
	modified:   src/ConsensusSequence.c
	modified:   src/DECIPHER.h
	modified:   src/DistanceMatrix.c
	modified:   src/R_init_decipher.c
	modified:   src/RemoveGaps.c
	modified:   src/ReplaceChars.c
	modified:   vignettes/ArtOfAlignmentInR.Rnw
	modified:   vignettes/ClassifySequences.Rnw
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/DesignM

--- a/vignettes/ArtOfAlignmentInR.Rnw
+++ b/vignettes/ArtOfAlignmentInR.Rnw
@@ -366,7 +366,7 @@ DNA_adjusted <- AdjustAlignment(DNA)
 
 It is common to use alignment as a preliminary step before the creation of a phylogenetic tree.  \Rpackage{DECIPHER}, like the majority of alignment programs, attempts to maximize homologous positions between the sequences being aligned.  Such an alignment is particularly useful when investigating which residues are in the same structural position of a protein.  However, disparate sequence regions tend to be concentrated into the same ``gappy'' areas of the alignment.  When viewed from a phylogenetic perspective these homologies have highly implausible insertion/deletion scenarios.
 
-To mitigate the problem of false homologies, \Rfunction{StaggerAlignment} will automatically generate a staggered version of an existing alignment.  Staggered alignments separate potentially non-homologous regions into separate columns of the alignment.  The result is an alignment that is less visually appealing, but likely more accurate from a phylogenetic perspective.  As such, this is an important post-processing step whenever the alignment will be used to construct a phylogenetic tree (e.g., with \Rfunction{DistanceMatrix} and \Rfunction{IdClusters}).
+To mitigate the problem of false homologies, \Rfunction{StaggerAlignment} will automatically generate a staggered version of an existing alignment.  Staggered alignments separate potentially non-homologous regions into separate columns of the alignment.  The result is an alignment that is less visually appealing, but likely more accurate from a phylogenetic perspective.
 
 <<expr10,eval=FALSE,echo=TRUE>>=
 DNA_staggered <- StaggerAlignment(DNA)
