--- a/vignettes/RepeatRepeat.Rnw
+++ b/vignettes/RepeatRepeat.Rnw
@@ -37,7 +37,7 @@
 \begin{document}
 %\setkeys{Gin}{width=0.55\textwidth}
 
-\title{Classify Sequences}
+\title{Repeat, Repeat!}
 \author{Erik S. Wright}
 \date{\today}
 \maketitle
