Minor improvements to AlignProfiles, FindSynteny, TreeLine, and vignettes. Major improvements to IdClusters.
 Committer: Erik Wright <eswright@pitt.edu>
 Changes to be committed:
	modified:   DESCRIPTION
	modified:   R/IdClusters.R
	modified:   R/TreeLine.R
	modified:   man/IdClusters.Rd
	modified:   src/AlignProfiles.c
	modified:   src/ChainSegments.c
	modified:   src/DECIPHER.h
	modified:   src/MultiMatch.c
	modified:   src/R_init_decipher.c
	modified:   vignettes/DECIPHERing.Rnw

--- a/vignettes/DECIPHERing.Rnw
+++ b/vignettes/DECIPHERing.Rnw
@@ -191,9 +191,9 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \end{Schunk}
 \end{enumerate}
 
-For parallelization on Mac OS X, extra steps are required to \underline{\url{http://mac.r-project.org/openmp/}{enable OpenMP}} before install.  In summary, run "clang -v" and then download the corresponding LLVM tar.gz file.  Run the sudo tar command as shown, and then add these two lines to your ~/.R/Makevars file:
+For parallelization on Mac OS X, extra steps are required to \underline{\url{http://mac.r-project.org/openmp/}{enable OpenMP}} before install.  In summary, run "clang -v" and then download the corresponding LLVM tar.gz file.  Run the sudo tar command as shown, and then add these two lines to your $\sim$/.R/Makevars file:
 
-CPPFLAGS += -Xclang -fopenmp
+CPPFLAGS += -Xclang -fopenmp\\
 LDFLAGS += -lomp
 
 Then \Rpackage{DECIPHER} can be built and installed the usual way via the command line.
