New Clusterize function
 Committer: Erik Wright <eswright@pitt.edu>
	modified:   DESCRIPTION
	modified:   NAMESPACE
	modified:   R/AlignProfiles.R
	new file:   R/Clusterize.R
	modified:   R/DB2Seqs.R
	modified:   R/DistanceMatrix.R
	deleted:    R/IdClusters.R
	modified:   R/IdLengths.R
	modified:   R/SearchDB.R
	new file:   man/Clusterize.Rd
	modified:   man/DB2Seqs.Rd
	modified:   man/DECIPHER-package.Rd
	modified:   man/DistanceMatrix.Rd
	deleted:    man/IdClusters.Rd
	modified:   man/IdLengths.Rd
	modified:   src/AlignProfiles.c
	modified:   src/DECIPHER.h
	modified:   src/DistanceMatrix.c
	modified:   src/EnumerateSequence.c
	modified:   src/MultiMatch.c
	new file:   src/PairwiseAlignment.c
	modified:   src/R_init_decipher.c
	new file:   src/SphericalKmeans.c
	new file:   vignettes/ClusteringSequences.Rnw
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/DesignPrimers.Rnw
	modified:   vignettes/DesignSignatures.Rnw
	modified:   vignettes/FindChimeras.Rnw
	modified:   vignettes/FindingGenes.Rnw

--- a/vignettes/DesignPrimers.Rnw
+++ b/vignettes/DesignPrimers.Rnw
@@ -134,7 +134,7 @@ Seqs2DB(fas, "FASTA", dbConn, "Streptomyces")
 
 \subsection{Defining Groups}
 
-At this point we need to define groups of related sequences in the database we just created.  In this case we wish to define a unique group for the sequences belonging to each species of \textit{Streptomyces}.  In order to accomplish this we must parse the information contained in the description of each FASTA sequence record that we just imported.  Alternatively we could use the functions \Rfunction{IdentifyByRank}, \Rfunction{FormGroups}, \Rfunction{IdClusters}, or \Rfunction{TreeLine} to define groups.
+At this point we need to define groups of related sequences in the database we just created.  In this case we wish to define a unique group for the sequences belonging to each species of \textit{Streptomyces}.  In order to accomplish this we must parse the information contained in the description of each FASTA sequence record that we just imported.  Alternatively we could use the functions \Rfunction{IdentifyByRank}, \Rfunction{FormGroups}, \Rfunction{Clusterize}, or \Rfunction{TreeLine} to define groups.
 
 <<expr3,eval=TRUE>>=
 # get the FASTA record description
