--- a/vignettes/FindChimeras.Rnw
+++ b/vignettes/FindChimeras.Rnw
@@ -102,7 +102,7 @@ If a reference database is not present then it is feasible to create one if a si
 The reference database is required to have several fields of information that are not found in a newly created sequence database:
 \begin{enumerate}
 \item \term{bases} and \term{nonbases} as provided by the function \Rfunction{IdLengths}.
-\item \term{origin} as provided by the function \Rfunction{FormGroups}.  The origin column contains the taxonomic rank above the level shared by the whole group.  For example, the origin of the group \textit{Nanoarchaeum} would be \textit{Root; Archaea; Nanoarchaeota}.  Without the taxonomic classifications it would be possible to substitute numbers.  For example, the rank 3.1.4.2 with a group named 4 that included 4.1 and 4.2 would have origin 3.1.  These numbers could be generated using \Rfunction{IdClusters} or \Rfunction{TreeLine} with multiple \Rfunarg{cutoffs}.
+\item \term{origin} as provided by the function \Rfunction{FormGroups}.  The origin column contains the taxonomic rank above the level shared by the whole group.  For example, the origin of the group \textit{Nanoarchaeum} would be \textit{Root; Archaea; Nanoarchaeota}.  Without the taxonomic classifications it would be possible to substitute numbers.  For example, the rank 3.1.4.2 with a group named 4 that included 4.1 and 4.2 would have origin 3.1.  These numbers could be generated using \Rfunction{Clusterize} or \Rfunction{TreeLine} with multiple \Rfunarg{cutoffs}.
 \end{enumerate}
 
 Below is an example of building a reference database \textit{de novo} from a FASTA file of ribosomal RNA (rRNA) sequences downloaded from SILVA (\underline{\url{http://www.arb-silva.de/}}).  Of course, the reference database must match the type of the query sequences, so in the remainder of this vignette we use a comprehensive SSU rRNA (16S) database.  The information in this section is only given as an example of how to build a reference database from scratch.
